# workflow-orchestration-queue-zulu78-b

./: .ai-repository-summary.md  .assembled-orchestrator-prompt.md  .env.example  .gitignore  AGENTS.md  Dockerfile.notifier  Dockerfile.sentinel  README.md  ai-new-workflow-app-template.code-workspace  docker-compose.yml  opencode.json  pyproject.toml  run_opencode_prompt.sh
.devcontainer/: devcontainer.json
.github/: .labels.json
.github/.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml  validate.yml
.github/workflows/prompts/: orchestrator-agent-prompt.md
.opencode/: package.json
.opencode/agents/: agent-instructions-expert.md  backend-developer.md  code-reviewer.md  data-scientist.md  developer.md  devops-engineer.md  frontend-developer.md  ml-engineer.md  orchestrator.md  planner.md  product-manager.md  qa-test-engineer.md
docs/: charlie80-b-run-report.md  implementation-plan.md  subagent-tracing-options-report.md  workflow-issues-and-fixes.md
docs/api/: README.md
docs/debrief-and-document/: project-setup-debrief.md  trace.md
local_ai_instruction_modules/: ai-development-instructions.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  pr-approval-merge-plan.md  tech-stack.md  workflow-plan.md
scripts/: devcontainer-opencode.sh  start-opencode-server.sh  trace-extract.py  validate.ps1
src/workflow_orchestration_queue/: __init__.py  notifier.py  sentinel.py
src/workflow_orchestration_queue/models/: __init__.py  work_item.py
src/workflow_orchestration_queue/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh
tests/: __init__.py  test_work_item.py
